FIX: font size jump when lazy loading a different page

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,14 +1,8 @@
 @import '@styles/_theme.scss';
-@import '@styles/_breakpoints.scss';
 @import '@styles/_mixins.scss';
 
 html {
   @include smooth-font;
-  font-size: 18px;
-
-  @include breakpoint-medium-down {
-    font-size: 16px;
-  }
 }
 
 a {
