--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -29,8 +29,6 @@
 
 @mixin smooth-font {
   $smoothTextShadowColor: rgba(0, 0, 0, 0.01) 0 0 1px;
-  font-size: 100%;
-  -webkit-text-size-adjust: 100%;
   font-variant-ligatures: none;
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
